--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -66,9 +66,11 @@ jobs:
           sudo apt-key add winehq.key
           sudo add-apt-repository 'deb https://dl.winehq.org/wine-builds/ubuntu/ focal main'
           sudo apt update
-          sudo apt install --install-recommends winehq-stable -y ; sudo apt install cabextract xdotool -y
-          wget -nc https://github.com/Winetricks/winetricks/raw/master/src/winetricks
+          sudo apt install --install-recommends winehq-stable -y ; sudo apt install cabextract xdotool xinit -y
+          sudo apt install xserver-xorg-core --no-install-recommends --no-install-suggests -y
+          wget -qnc https://github.com/Winetricks/winetricks/raw/master/src/winetricks
           chmod +x winetricks ; sudo mv winetricks /usr/bin
+          startx &
           bash deploy.sh stablewp
           mkdir dist
           mv cnctsun*.AppImage* dist/.
