--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -62,7 +62,7 @@ jobs:
           export DISPLAY=':99.0'
           sudo Xvfb :99 -screen 0 1024x768x24 >/dev/null 2>&1 & XPID=$!
           sudo dpkg --add-architecture i386
-          wget -nc https://dl.winehq.org/wine-builds/winehq.key
+          wget -qnc https://dl.winehq.org/wine-builds/winehq.key
           sudo apt-key add winehq.key
           sudo add-apt-repository 'deb https://dl.winehq.org/wine-builds/ubuntu/ focal main'
           sudo apt update
