--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -65,13 +65,12 @@ jobs:
           wget -qnc https://dl.winehq.org/wine-builds/winehq.key
           sudo apt-key add winehq.key
           sudo add-apt-repository 'deb https://dl.winehq.org/wine-builds/ubuntu/ focal main'
-          sudo apt update
-          sudo apt install --install-recommends winehq-stable -y ; sudo apt install cabextract xdotool xinit -y
-          sudo apt install xserver-xorg-core --no-install-recommends --no-install-suggests -y
+          sudo apt update &>/dev/null
+          sudo apt install --install-recommends winehq-stable -y &>/dev/null ; sudo apt install cabextract xdotool xinit -y &>/dev/null
+          sudo apt install xserver-xorg-core --no-install-recommends --no-install-suggests -y &>/dev/null
           wget -qnc https://github.com/Winetricks/winetricks/raw/master/src/winetricks
           chmod +x winetricks ; sudo mv winetricks /usr/bin
-          startx &
-          bash deploy.sh stablewp
+          xinit bash deploy.sh stablewp >/dev/null 2>&1 &
           mkdir dist
           mv cnctsun*.AppImage* dist/.
           cd dist
