--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -61,15 +61,12 @@ jobs:
           set -ex
           export DISPLAY=':99.0'
           sudo Xvfb :99 -screen 0 1024x768x24 >/dev/null 2>&1 & XPID=$!
-          sudo dpkg --add-architecture i386
-          wget -qnc https://dl.winehq.org/wine-builds/winehq.key
-          sudo apt-key add winehq.key &>/dev/null
-          sudo add-apt-repository 'deb https://dl.winehq.org/wine-builds/ubuntu/ focal main' &>/dev/null
-          sudo apt update &>/dev/null
-          sudo apt install --install-recommends winehq-stable -y &>/dev/null ; sudo apt install cabextract xdotool xinit -y &>/dev/null
-          sudo apt install xserver-xorg-core --no-install-recommends --no-install-suggests -y &>/dev/null
-          wget -qnc https://github.com/Winetricks/winetricks/raw/master/src/winetricks
-          chmod +x winetricks ; sudo mv winetricks /usr/bin
+          # xauth with complain unless ~/.Xauthority exists
+          touch ~/.Xauthority
+          # only this one key is needed for X11 over SSH 
+          xauth generate :99 . trusted 
+          # generate our own key, xauth requires 128 bit hex encoding
+          xauth add ${HOST}:99 . $(xxd -l 16 -p /dev/urandom)
           sudo nohup startx bash deploy.sh stablewp
           # bash deploy.sh stablewp
           # mkdir dist
