--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -61,6 +61,8 @@ jobs:
           set -ex
           export DISPLAY=':99.0'
           sudo Xvfb :99 -screen 0 1024x768x24 >/dev/null 2>&1 & XPID=$!
+          sudo apt install xinit -y &>/dev/null
+          sudo apt install xserver-xorg-core --no-install-recommends --no-install-suggests -y &>/dev/null
           # xauth with complain unless ~/.Xauthority exists
           touch ~/.Xauthority
           # only this one key is needed for X11 over SSH 
