--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -64,12 +64,12 @@ jobs:
           sudo apt install xinit -y &>/dev/null
           sudo apt install xserver-xorg-core --no-install-recommends --no-install-suggests -y &>/dev/null
           # xauth with complain unless ~/.Xauthority exists
-          touch ~/.Xauthority
+          sudo touch ~/.Xauthority
           # only this one key is needed for X11 over SSH 
-          xauth generate :99 . trusted 
+          sudo xauth generate :99 . trusted 
           # generate our own key, xauth requires 128 bit hex encoding
-          xauth add ${HOST}:99 . $(xxd -l 16 -p /dev/urandom)
-          nohup startx bash deploy.sh stablewp
+          sudo xauth add ${HOST}:99 . $(xxd -l 16 -p /dev/urandom)
+          sudo nohup startx bash deploy.sh stablewp
           # bash deploy.sh stablewp
           # mkdir dist
           # mv cnctsun*.AppImage* dist/.
