--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -66,10 +66,11 @@ jobs:
           # xauth with complain unless ~/.Xauthority exists
           touch ~/.Xauthority ; sudo touch /root/.Xauthority
           # only this one key is needed for X11 over SSH 
-          sudo xauth generate :98 . trusted 
+          sudo xauth generate :99 . trusted 
           # generate our own key, xauth requires 128 bit hex encoding
-          sudo xauth add ${HOST}:98 . $(xxd -l 16 -p /dev/urandom)
-          sudo nohup startx bash deploy.sh stablewp -- :98
+          sudo xauth add ${HOST}:99 . $(xxd -l 16 -p /dev/urandom)
+          # sudo nohup startx bash deploy.sh stablewp -- :99
+          xvfb-run nohup startx bash deploy.sh stablewp
           # bash deploy.sh stablewp
           # mkdir dist
           # mv cnctsun*.AppImage* dist/.
