--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -58,8 +58,9 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         uses: GabrielBB/xvfb-action@v1
-        run: bash deploy.sh stablewp
-        # run: |
+        with:
+          run: bash deploy.sh stablewp
+          # run: |
           # set -ex
           # export DISPLAY=':99.0'
           # sudo Xvfb :99 -screen 0 1024x768x24 >/dev/null 2>&1 & XPID=$!
