--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -59,7 +59,7 @@ jobs:
       - name: Run a multi-line script
         uses: GabrielBB/xvfb-action@v1
         with:
-          run: sudo apt install xinit -y &>/dev/null && sudo apt install xserver-xorg-core --no-install-recommends --no-install-suggests -y &>/dev/null && touch ~/.Xauthority && xauth generate :99 . trusted && xauth add ${HOST}:99 . $(xxd -l 16 -p /dev/urandom) && nohup startx bash deploy.sh stablewp -- :99
+          run: sudo apt install xinit -y &>/dev/null && sudo apt install xserver-xorg-core --no-install-recommends --no-install-suggests -y &>/dev/null && touch ~/.Xauthority && xauth generate :99 . trusted && nohup startx bash deploy.sh stablewp -- :99
           # run: |
           # set -ex
           # export DISPLAY=':99.0'
