--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -64,11 +64,11 @@ jobs:
           # sudo apt install xinit -y &>/dev/null
           # sudo apt install xserver-xorg-core --no-install-recommends --no-install-suggests -y &>/dev/null
           # xauth with complain unless ~/.Xauthority exists
-          touch ~/.Xauthority ; sudo touch /root/.Xauthority
+          # touch ~/.Xauthority ; sudo touch /root/.Xauthority
           # only this one key is needed for X11 over SSH 
-          sudo xauth generate :99 . trusted 
+          # sudo xauth generate :99 . trusted 
           # generate our own key, xauth requires 128 bit hex encoding
-          sudo xauth add ${HOST}:99 . $(xxd -l 16 -p /dev/urandom)
+          # sudo xauth add ${HOST}:99 . $(xxd -l 16 -p /dev/urandom)
           # sudo nohup startx bash deploy.sh stablewp -- :99 
           xvfb-run --server-args="-screen 0 1024x768x24" bash deploy.sh stablewp
           # bash deploy.sh stablewp
