--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -59,9 +59,9 @@ jobs:
       - name: Run a multi-line script
         run: |
           set -ex
-          export DISPLAY=':99.0'
+          # export DISPLAY=':99.0'
           # sudo Xvfb :99 -screen 0 1024x768x24 >/dev/null 2>&1 & XPID=$!
-          sudo apt install openbox -y &>/dev/null
+          # sudo apt install openbox -y &>/dev/null
           # sudo apt install xinit -y &>/dev/null
           # sudo apt install xserver-xorg-core --no-install-recommends --no-install-suggests -y &>/dev/null
           # xauth with complain unless ~/.Xauthority exists
@@ -71,8 +71,7 @@ jobs:
           # generate our own key, xauth requires 128 bit hex encoding
           # sudo xauth add ${HOST}:99 . $(xxd -l 16 -p /dev/urandom)
           # sudo nohup startx bash deploy.sh stablewp -- :99
-          mkdir -p ~/.config/openbox ; touch ~/.config/openbox/autostart ; echo "cd /home/runner/work/cnctsun_AppImage/cnctsun_AppImage" > ~/.config/openbox/autostart ; echo "bash deploy.sh stablewp" >> ~/.config/openbox/autostart
-          xvfb-run --server-args="-screen 0 1024x768x24" openbox-session
+          xvfb-run --server-args="-screen 0 1024x768x24" bash deploy.sh stablewp
           # bash deploy.sh stablewp
           # mkdir dist
           # mv cnctsun*.AppImage* dist/.
