--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
       - uses: actions/checkout@v2
 
       # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
+      - name: Run a single-line script
         run: bash deploy.sh stable
 
       - name: Upload artifact
@@ -49,7 +49,7 @@ jobs:
       - uses: actions/checkout@v2
 
       # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
+      - name: Run a single-line script
         run: xvfb-run --server-args="-screen 0 1024x768x24" bash deploy.sh stablewp
 
       - name: Upload artifact
@@ -67,7 +67,7 @@ jobs:
         with:
           name: cnctsun-continuous-x86_64.AppImage
 
-      - name: Release
+      - name: release
         uses: marvinpinto/action-automatic-releases@latest
         with:
           title: cnctsun stable
@@ -87,7 +87,7 @@ jobs:
         with:
           name: cnctsun-continuous-wp-x86_64.AppImage
 
-      - name: Release
+      - name: release
         uses: marvinpinto/action-automatic-releases@latest
         with:
           title: cnctsun stable with wineprefix
