--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,8 +10,10 @@ on:
   # Triggers the workflow on push or pull request events but only for the master branch
   push:
     branches: [ test ]
+    paths-ignore: [ '**/README.md' ]
   pull_request:
     branches: [ test ]
+    paths-ignore: [ '**/README.md' ]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -49,8 +51,10 @@ jobs:
       - uses: actions/checkout@v2
 
       # Runs a set of commands using the runners shell
-      - name: Run a single-line script
-        run: xvfb-run --server-args="-screen 0 1024x768x24" bash deploy.sh stablewp
+      - name: Run a multi-line script
+        run: |
+          sudo dpkg --add-architecture i386 && sudo apt update && sudo apt install libfuse2:i386 libglu1-mesa:i386
+          xvfb-run --server-args="-screen 0 1024x768x24" bash deploy.sh stablewp
 
       - name: Upload artifact
         uses: actions/upload-artifact@v1.0.0
