--- a/cnctsun.yml
+++ b/cnctsun.yml
@@ -14,7 +14,7 @@ AppDir:
     id: cnctsun
     name: cnctsun
     icon: cnctsun
-    version: "1.0"
+    version: !ENV ${TS_VER}
     exec: bin/bash
     exec_args: wrapper $@
 
