--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,7 +32,7 @@ jobs:
 
       # Set TS_VER
       - name: Run version script
-        run: echo "TS_VER=6.$(wget -q -O- https://www.moddb.com/mods/tiberian-sun-client/downloads/tiberian-sun-client-600 | grep TS_Client | cut -d'.' -f2) >> $GITHUB_ENV
+        run: echo "TS_VER=6.$(wget -q -O- https://www.moddb.com/mods/tiberian-sun-client/downloads/tiberian-sun-client-600 | grep TS_Client | cut -d'.' -f2)" >> $GITHUB_ENV
 
       # Runs a set of commands using the runners shell
       - name: Run a single-line script
