--- a/cnctsun.yml
+++ b/cnctsun.yml
@@ -11,8 +11,8 @@ AppDir:
     name: cnctsun
     icon: cnctsun
     version: !ENV ${TS_VER}
-    exec: AppRun
-    exec_args: $@
+    exec: bin/bash
+    exec_args: wrapper $@
 
   apt:
     arch: [amd64, i386]
