--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,10 +9,10 @@ on:
   #   - cron: "0 0 */3 * *"
   # Triggers the workflow on push or pull request events but only for the master branch
   push:
-    branches: [ v6 ]
+    branches: [ v7 ]
     paths-ignore: [ '**/README.md' ]
   pull_request:
-    branches: [ v6 ]
+    branches: [ v7 ]
     paths-ignore: [ '**/README.md' ]
 
   # Allows you to run this workflow manually from the Actions tab
@@ -23,7 +23,7 @@ jobs:
   # This workflow contains a single job called "cnctsun"
   cnctsun:
     # The type of runner that the job will run on
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -32,7 +32,7 @@ jobs:
 
       # Set TS_VER
       - name: Run version script
-        run: echo "TS_VER=6.$(wget -q -O- https://www.moddb.com/mods/tiberian-sun-client/downloads/tiberian-sun-client-600 | grep TS_Client | cut -d'.' -f2)" >> $GITHUB_ENV
+        run: echo "TS_VER=7.$(wget -q -O- https://www.moddb.com/mods/tiberian-sun-client/downloads/tsclient70 | grep TSClient | cut -d'.' -f2)" >> $GITHUB_ENV
 
       # Runs a set of commands using the runners shell
       - name: Run a single-line script
@@ -41,15 +41,15 @@ jobs:
           bash deploy.sh stable
 
       - name: Upload artifact
-        uses: actions/upload-artifact@v1.0.0
+        uses: actions/upload-artifact@v4
         with:
           name: cnctsun-continuous-x86_64.AppImage
-          path: 'dist'
+          path: '/home/runner/work/cnctsun_AppImage/cnctsun_AppImage/dist'
 
   # This workflow contains a single job called "cnctsun-wp"
   cnctsun-wp:
     # The type of runner that the job will run on
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -58,34 +58,35 @@ jobs:
 
       # Set TS_VER
       - name: Run version script
-        run: echo "TS_VER=6.$(wget -q -O- https://www.moddb.com/mods/tiberian-sun-client/downloads/tiberian-sun-client-600 | grep TS_Client | cut -d'.' -f2)_WP" >> $GITHUB_ENV
+        run: echo "TS_VER=7.$(wget -q -O- https://www.moddb.com/mods/tiberian-sun-client/downloads/tsclient70 | grep TSClient | cut -d'.' -f2)_WP" >> $GITHUB_ENV
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
-          sudo dpkg --add-architecture i386 && sudo apt update && sudo apt install libfuse2 libfuse2:i386 libglu1-mesa:i386
+          sudo apt update && sudo apt install libfuse2 -y
           xvfb-run --server-args="-screen 0 1024x768x24" bash deploy.sh stablewp
 
       - name: Upload artifact
-        uses: actions/upload-artifact@v1.0.0
+        uses: actions/upload-artifact@v4
         with:
           name: cnctsun-continuous-wp-x86_64.AppImage
-          path: 'dist'
+          path: '/home/runner/work/cnctsun_AppImage/cnctsun_AppImage/dist'
 
   release-stable:
     needs: [cnctsun]
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
 
     steps:
-      - uses: actions/download-artifact@v1
+      - uses: actions/download-artifact@v4
         with:
           name: cnctsun-continuous-x86_64.AppImage
+          path: /home/runner/work/cnctsun_AppImage/cnctsun_AppImage/cnctsun-continuous-x86_64.AppImage
 
       - name: release
-        uses: marvinpinto/action-automatic-releases@latest
+        uses: marvinpinto/action-automatic-releases@6273874b61ebc8c71f1a61b2d98e234cf389b303
         with:
-          title: cnctsun stable v6
-          automatic_release_tag: stable-v6
+          title: cnctsun stable v7
+          automatic_release_tag: stable-v7
           prerelease: false
           draft: false
           files: |
@@ -94,18 +95,19 @@ jobs:
 
   release-stable-wp:
     needs: [cnctsun-wp]
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
 
     steps:
-      - uses: actions/download-artifact@v1
+      - uses: actions/download-artifact@v4
         with:
           name: cnctsun-continuous-wp-x86_64.AppImage
+          path: /home/runner/work/cnctsun_AppImage/cnctsun_AppImage/cnctsun-continuous-wp-x86_64.AppImage
 
       - name: release
-        uses: marvinpinto/action-automatic-releases@latest
+        uses: marvinpinto/action-automatic-releases@6273874b61ebc8c71f1a61b2d98e234cf389b303
         with:
-          title: cnctsun stable v6 with wineprefix
-          automatic_release_tag: stable-wp-v6
+          title: cnctsun stable v7 with wineprefix
+          automatic_release_tag: stable-wp-v7
           prerelease: false
           draft: false
           files: |
