--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,7 @@ jobs:
   # This workflow contains a single job called "cnctsun"
   cnctsun:
     # The type of runner that the job will run on
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -49,7 +49,7 @@ jobs:
   # This workflow contains a single job called "cnctsun-wp"
   cnctsun-wp:
     # The type of runner that the job will run on
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -74,7 +74,7 @@ jobs:
 
   release-stable:
     needs: [cnctsun]
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
 
     steps:
       - uses: actions/download-artifact@v4
@@ -95,7 +95,7 @@ jobs:
 
   release-stable-wp:
     needs: [cnctsun-wp]
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
 
     steps:
       - uses: actions/download-artifact@v4
