--- a/.github/workflows/release-check.yml
+++ b/.github/workflows/release-check.yml
@@ -14,7 +14,7 @@ jobs:
         token: ${{ secrets.PAT }}
     - name: get-latest-version
       run: |
-        VERSION="7.$(wget -q -O- https://www.moddb.com/mods/tiberian-sun-client/downloads/tslient70 | grep TSClient | cut -d'.' -f2)"
+        VERSION="7.$(wget --user-agent='Mozilla/5.0 (X11; Linux x86_64; rv:140.0) Gecko/20100101 Firefox/140.0' -q -O- https://www.moddb.com/mods/tiberian-sun-client/downloads/tsclient70 | grep TS_Client | cut -d'.' -f2)"
         last=$(tail -n1 .build | awk '{print $4}')
 
         if [ "$last" != "$VERSION" ]; then
